--- a/src/common/FormControls/FormControls.module.css
+++ b/src/common/FormControls/FormControls.module.css
@@ -3,13 +3,29 @@
     color:red;
 }
 .ErrorSpan {
-    color: red
+    color: red;
+    display: block;
+    margin-top: 5px;
+    font-size: 12px;
 }
 .Input {
-    width: 220px;
-    border: 1px solid wheat;
+    width: 100%;
 }
 .Input input {
     border: 0;
-    outline:none
+    width: 100%;
+    outline:none;
+    border-radius: 3px;
+    box-sizing: border-box;
+    padding: 10px;
+    height: 40px;
+    font-size: 16px;
+    transition-duration: 200ms;
+}
+.Input input:focus {
+    box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.2)
+}
+
+.ShowLabel {
+    cursor: pointer;
 }
