--- a/src/common/FormControls/FormControls.module.css
+++ b/src/common/FormControls/FormControls.module.css
@@ -25,6 +25,7 @@
     height: 40px;
     font-size: 16px;
     transition-duration: 200ms;
+
 }
 .Input input:focus {
     box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.2)
@@ -34,10 +35,23 @@
     cursor: pointer;
 }
 .StyledPasswordInput{
+    display: flex;
     margin: 0 auto;
     width: 80%;
     background-color: rgb(232, 240, 254);
 }
+
+.StyledPasswordInput input{
+    width: 95%;
+}
+
+.StyledPasswordInput span{
+    line-height: 20px;
+    padding-top: 10px;
+    padding-right: 5px;
+}
+
+
 .StyledInput input,
 .StyledPasswordInput input{
     background-color: rgb(232, 240, 254);
